bagusin view student

--- a/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
+++ b/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
@@ -1,12 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Add Student View Controller-->
+        <scene sceneID="ODm-I1-fIi">
+            <objects>
+                <viewController id="cnY-k6-lYd" customClass="AddStudentViewController" customModule="FinalChallengeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Eln-Ge-0bg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GDr-LC-D9Q">
+                                <rect key="frame" x="0.0" y="56" width="414" height="752"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="5KK-db-U39" firstAttribute="bottom" secondItem="GDr-LC-D9Q" secondAttribute="bottom" id="StS-bE-6by"/>
+                            <constraint firstItem="GDr-LC-D9Q" firstAttribute="top" secondItem="5KK-db-U39" secondAttribute="top" id="X1q-ix-ric"/>
+                            <constraint firstItem="5KK-db-U39" firstAttribute="trailing" secondItem="GDr-LC-D9Q" secondAttribute="trailing" id="a4K-Ts-LtM"/>
+                            <constraint firstItem="GDr-LC-D9Q" firstAttribute="leading" secondItem="5KK-db-U39" secondAttribute="leading" id="cux-x1-Vln"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5KK-db-U39"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zvy-VX-gt5">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="oAd-CB-XcQ"/>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="kup-Bs-YJY"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="videoPreview" destination="GDr-LC-D9Q" id="24N-Rt-seD"/>
+                        <segue destination="5Ln-KQ-Znw" kind="show" identifier="showNewStudentPreview" id="QgU-UB-21Y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zp3-f7-u4I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1880" y="-950"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="552-nj-8av">
+            <objects>
+                <viewController id="5Ln-KQ-Znw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="G5B-fc-aao">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="gYh-jw-ThS"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="W79-gY-Hxt"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d79-1j-13H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2784" y="-950"/>
+        </scene>
         <!--Students View Controller-->
         <scene sceneID="R5k-xG-qt2">
             <objects>
@@ -16,8 +67,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bht-aX-avv">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <rect key="frame" x="0.0" y="188" width="414" height="674"/>
+                                <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="zWw-Qd-UtZ">
+                                    <rect key="frame" x="0.0" y="121" width="414" height="0.0"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="studentCell" rowHeight="65" id="WZe-l1-5xP" customClass="StudentsTableViewCell" customModule="FinalChallengeApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="65"/>
@@ -50,27 +106,38 @@
                                     <outlet property="delegate" destination="hm9-KI-3VW" id="OZc-Bj-8XW"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search" id="v4p-R0-9Fd">
+                                <rect key="frame" x="0.0" y="144" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.95686918497085571" green="0.9568513035774231" blue="0.95686346292495728" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="K6q-6A-I90" firstAttribute="trailing" secondItem="Bht-aX-avv" secondAttribute="trailing" id="7F3-Y3-3ck"/>
-                            <constraint firstItem="K6q-6A-I90" firstAttribute="bottom" secondItem="Bht-aX-avv" secondAttribute="bottom" id="Z95-6V-Pit"/>
-                            <constraint firstItem="Bht-aX-avv" firstAttribute="leading" secondItem="K6q-6A-I90" secondAttribute="leading" id="eNl-1b-YCT"/>
-                            <constraint firstItem="Bht-aX-avv" firstAttribute="top" secondItem="K6q-6A-I90" secondAttribute="top" id="jVr-jJ-dyt"/>
+                            <constraint firstItem="Bht-aX-avv" firstAttribute="leading" secondItem="K6q-6A-I90" secondAttribute="leading" id="5vK-kj-Wqx"/>
+                            <constraint firstItem="Bht-aX-avv" firstAttribute="trailing" secondItem="K6q-6A-I90" secondAttribute="trailing" id="owB-8V-tpa"/>
+                            <constraint firstItem="Bht-aX-avv" firstAttribute="bottom" secondItem="K6q-6A-I90" secondAttribute="bottom" id="uOT-3L-sqC"/>
+                            <constraint firstItem="Bht-aX-avv" firstAttribute="top" secondItem="v4p-R0-9Fd" secondAttribute="bottom" id="wuL-3q-uA4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="K6q-6A-I90"/>
                     </view>
                     <navigationItem key="navigationItem" id="vFQ-1V-U0u">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qUn-Qc-Izy"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qUn-Qc-Izy">
+                            <connections>
+                                <segue destination="j7t-UQ-q6q" kind="modal" identifier="showAddStudent" id="fSu-5i-UeL"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="v4p-R0-9Fd" id="Dcw-ce-2ao"/>
                         <outlet property="tableView" destination="Bht-aX-avv" id="896-KZ-H4o"/>
                         <segue destination="I7P-FV-xcF" kind="show" identifier="showStudentReport" id="jn5-am-iTU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DjU-jb-wPV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1139.1304347826087" y="831.69642857142856"/>
+            <point key="canvasLocation" x="-697.10144927536237" y="502.90178571428567"/>
         </scene>
         <!--Report View Controller-->
         <scene sceneID="NFd-gf-J6W">
@@ -153,7 +220,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zQE-PR-Uah" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2002.8985507246377" y="830.35714285714278"/>
+            <point key="canvasLocation" x="1119" y="822"/>
         </scene>
         <!--Report's Detail-->
         <scene sceneID="I8U-a0-4wu">
@@ -295,7 +362,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mBW-fl-3Rf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2847.826086956522" y="1263.6160714285713"/>
+            <point key="canvasLocation" x="2783" y="822"/>
         </scene>
         <!--Parents Detail View Controller-->
         <scene sceneID="Ifk-Aa-F8n">
@@ -324,7 +391,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hgt-ZO-Aph" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2855.072463768116" y="2016.9642857142856"/>
+            <point key="canvasLocation" x="2783" y="1738"/>
         </scene>
         <!--View Detail View Controller-->
         <scene sceneID="Mhg-4b-xAe">
@@ -339,7 +406,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Exk-qc-xsb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3882.608695652174" y="1260.9375"/>
+            <point key="canvasLocation" x="3741" y="822"/>
         </scene>
         <!--Today's Report-->
         <scene sceneID="DjP-Ob-5zh">
@@ -409,7 +476,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tal-Rt-qOL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2847.826086956522" y="516.96428571428567"/>
+            <point key="canvasLocation" x="2783" y="-106"/>
         </scene>
         <!--Summary View Controller-->
         <scene sceneID="t9R-KQ-MEp">
@@ -531,7 +598,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r87-Nm-aKv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="wqA-Lj-Qfq" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3805.7971014492755" y="516.96428571428567"/>
+            <point key="canvasLocation" x="3741" y="-106"/>
         </scene>
         <!--Students-->
         <scene sceneID="hZm-IH-neX">
@@ -550,7 +617,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wUP-ac-YpD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="228.98550724637684" y="831.69642857142856"/>
+            <point key="canvasLocation" x="-1607" y="503"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sl9-gF-MOP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j7t-UQ-q6q" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bcQ-GS-Znr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cnY-k6-lYd" kind="relationship" relationship="rootViewController" id="xvM-Yi-SHl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hgu-a1-bB3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1016" y="-954"/>
         </scene>
     </scenes>
     <resources>
